--- a/main.css
+++ b/main.css
@@ -1,12 +1,75 @@
-.header {
-    padding-bottom: 20px;
-    margin-bottom: 20px;
+html, p, body, label, h3, h5 {
+    font-family: 'Open Sans', sans-serif;
 }
 
-.header > h3, h5 {
-    margin: 0;
-    padding-top: 20px;
+p {
+    font-family: 'Open Sans', sans-serif;
+    align-items: center;
+    font-size: 10px;
+    padding-top:5px;
+    padding-bottom:5px;
+    text-align:center;
+}
+
+.graph3 {
+    margin: auto;
+}
+
+.graph2 {
+    margin: auto;
+}
+
+.barplot {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 10px;
+}
+
+.header > h3 {
+    margin-bottom: 15px;
+    margin-top:15px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
     text-align: center;
+    font-size: 20px;
 }
 
-/* Include any custom CSS styling here! */
+h5 {
+    margin-left: 10px;
+    padding-left: 20px;
+    padding-top:5px;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 700;
+    font-family: 'Open Sans', sans-serif;
+}
+
+#centerbuttons {
+   margin: auto;
+   text-align: center;
+   align-items:center;
+   font-family: 'Open Sans', sans-serif;
+}      
+
+.country {
+    fill: #d4d4d4;
+    stroke: #fff;
+}
+
+.country:hover {
+    fill:#C56B59;
+    stroke: #fff;
+}
+
+.text {
+    font-size: 11px;
+}
+
+
+
+/* Include any custom CSS styling here! 
+COLOUR PALETTE HERE:
+orange: #FFA585
+blue: #B4D0CE
+purple: #A9A6DD */
